@@ -1,58 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2014/02/02 01:00:45 rodent Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/requires.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/caldav/__init__.py
-${PYSITELIB}/caldav/__init__.pyc
-${PYSITELIB}/caldav/__init__.pyo
-${PYSITELIB}/caldav/davclient.py
-${PYSITELIB}/caldav/davclient.pyc
-${PYSITELIB}/caldav/davclient.pyo
-${PYSITELIB}/caldav/elements/__init__.py
-${PYSITELIB}/caldav/elements/__init__.pyc
-${PYSITELIB}/caldav/elements/__init__.pyo
-${PYSITELIB}/caldav/elements/base.py
-${PYSITELIB}/caldav/elements/base.pyc
-${PYSITELIB}/caldav/elements/base.pyo
-${PYSITELIB}/caldav/elements/cdav.py
-${PYSITELIB}/caldav/elements/cdav.pyc
-${PYSITELIB}/caldav/elements/cdav.pyo
-${PYSITELIB}/caldav/elements/dav.py
-${PYSITELIB}/caldav/elements/dav.pyc
-${PYSITELIB}/caldav/elements/dav.pyo
-${PYSITELIB}/caldav/lib/__init__.py
-${PYSITELIB}/caldav/lib/__init__.pyc
-${PYSITELIB}/caldav/lib/__init__.pyo
-${PYSITELIB}/caldav/lib/error.py
-${PYSITELIB}/caldav/lib/error.pyc
-${PYSITELIB}/caldav/lib/error.pyo
-${PYSITELIB}/caldav/lib/namespace.py
-${PYSITELIB}/caldav/lib/namespace.pyc
-${PYSITELIB}/caldav/lib/namespace.pyo
-${PYSITELIB}/caldav/lib/url.py
-${PYSITELIB}/caldav/lib/url.pyc
-${PYSITELIB}/caldav/lib/url.pyo
-${PYSITELIB}/caldav/lib/vcal.py
-${PYSITELIB}/caldav/lib/vcal.pyc
-${PYSITELIB}/caldav/lib/vcal.pyo
-${PYSITELIB}/caldav/objects.py
-${PYSITELIB}/caldav/objects.pyc
-${PYSITELIB}/caldav/objects.pyo
-${PYSITELIB}/tests/__init__.py
-${PYSITELIB}/tests/__init__.pyc
-${PYSITELIB}/tests/__init__.pyo
-${PYSITELIB}/tests/_test_absolute.py
-${PYSITELIB}/tests/_test_absolute.pyc
-${PYSITELIB}/tests/_test_absolute.pyo
-${PYSITELIB}/tests/conf.py
-${PYSITELIB}/tests/conf.pyc
-${PYSITELIB}/tests/conf.pyo
-${PYSITELIB}/tests/proxy.py
-${PYSITELIB}/tests/proxy.pyc
-${PYSITELIB}/tests/proxy.pyo
-${PYSITELIB}/tests/test_caldav.py
-${PYSITELIB}/tests/test_caldav.pyc
-${PYSITELIB}/tests/test_caldav.pyo
